# Slicer

./: .gitignore  CMakeLists.txt  README.md  SuperBuild.cmake
.github/workflows/: sync_branches.yaml
Base/: CMakeLists.txt
Base/CLI/: CMakeLists.txt
Base/Logic/: CMakeLists.txt
Base/Python/: CMakeLists.txt  mrml.py
Base/QTApp/: CMakeLists.txt
Base/QTCLI/: CMakeLists.txt
Base/QTCore/: CMakeLists.txt  qSlicerCoreApplication.cxx  qSlicerLoadableModuleFactory.cxx
Base/QTGUI/: CMakeLists.txt  qSlicerPythonManager.cxx
CMake/: ExternalData.cmake  ExternalProjectDependency.cmake  SlicerCPack.cmake  SlicerConfigureDisplayableManagerObjectFactory.cmake  SlicerConfigureVersionHeaderTarget.cmake  SlicerDirectories.cmake  SlicerExtensionGenerateConfig.cmake  SlicerGenerateSlicerConfig.cmake  SlicerInstallConfig.cmake.in  SlicerMacroBuildApplication.cmake  SlicerMacroBuildBaseQtLibrary.cmake  SlicerMacroBuildLoadableModule.cmake  SlicerMacroBuildModuleLogic.cmake  SlicerMacroBuildModuleMRML.cmake  SlicerMacroBuildModuleQtLibrary.cmake  SlicerMacroBuildModuleWidgets.cmake  SlicerMacroBuildScriptedModule.cmake  SlicerMacroPythonWrapModuleVTKLibrary.cmake  UseSlicer.cmake.in
CMake/LastConfigureStep/: CMakeLists.txt
Extensions/CMake/: SlicerBlockBuildPackageAndUploadExtension.cmake
Libs/: CMakeLists.txt
Libs/ITKFactoryRegistration/: CMakeLists.txt  itkFactoryRegistration.h
Libs/MRML/CLI/: CMakeLists.txt
Libs/MRML/Core/: CMakeLists.txt  vtkArchive.cxx  vtkCacheManager.cxx  vtkMRMLVolumeArchetypeStorageNode.cxx
Libs/MRML/DisplayableManager/: CMakeLists.txt
Libs/MRML/DisplayableManager/Python/: CMakeLists.txt
Libs/MRML/IDImageIO/: CMakeLists.txt
Libs/MRML/Logic/: CMakeLists.txt
Libs/MRML/Widgets/: CMakeLists.txt
Libs/RemoteIO/: CMakeLists.txt
Libs/vtkITK/: CMakeLists.txt  vtkITK.h
Libs/vtkSegmentationCore/: CMakeLists.txt  vtkSegmentationConverterFactory.h
Libs/vtkTeem/: CMakeLists.txt
Modules/CLI/ACPCTransform/: CMakeLists.txt
Modules/CLI/AddScalarVolumes/: CMakeLists.txt
Modules/Loadable/Annotations/: CMakeLists.txt  qSlicerAnnotationsModule.cxx
Modules/Loadable/Annotations/Logic/: CMakeLists.txt
Modules/Loadable/Annotations/MRML/: CMakeLists.txt
Modules/Loadable/Colors/: CMakeLists.txt
Modules/Loadable/Colors/Logic/: CMakeLists.txt
Modules/Loadable/Colors/MRML/: CMakeLists.txt
Modules/Loadable/Colors/SubjectHierarchyPlugins/: CMakeLists.txt
Modules/Loadable/Colors/VTKWidgets/: CMakeLists.txt
Modules/Loadable/Colors/Widgets/: CMakeLists.txt
Modules/Loadable/Data/: CMakeLists.txt
Modules/Loadable/Data/Logic/: CMakeLists.txt
Modules/Loadable/Markups/: CMakeLists.txt
Modules/Loadable/Markups/Logic/: CMakeLists.txt
Modules/Loadable/Markups/MRML/: CMakeLists.txt
Modules/Loadable/Markups/MRMLDM/: CMakeLists.txt
Modules/Loadable/Markups/SubjectHierarchyPlugins/: CMakeLists.txt
Modules/Loadable/Markups/VTKWidgets/: CMakeLists.txt
Modules/Loadable/Markups/Widgets/: CMakeLists.txt
Modules/Loadable/Models/: CMakeLists.txt
Modules/Loadable/Models/SubjectHierarchyPlugins/: CMakeLists.txt
Modules/Loadable/Models/Widgets/: CMakeLists.txt
Modules/Loadable/Plots/: CMakeLists.txt
Modules/Loadable/Plots/SubjectHierarchyPlugins/: CMakeLists.txt
Modules/Loadable/Plots/Widgets/: CMakeLists.txt
Modules/Loadable/Reformat/: CMakeLists.txt
Modules/Loadable/SceneViews/: CMakeLists.txt
Modules/Loadable/SceneViews/SubjectHierarchyPlugins/: CMakeLists.txt
Modules/Loadable/Segmentations/: CMakeLists.txt  qSlicerSegmentationsModule.cxx
Modules/Loadable/Segmentations/EditorEffects/: CMakeLists.txt
Modules/Loadable/Segmentations/EditorEffects/Python/: CMakeLists.txt
Modules/Loadable/Segmentations/Logic/: CMakeLists.txt
Modules/Loadable/Segmentations/MRML/: CMakeLists.txt
Modules/Loadable/Segmentations/MRMLDM/: CMakeLists.txt
Modules/Loadable/Sequences/: CMakeLists.txt
Modules/Loadable/Sequences/Logic/: CMakeLists.txt
Modules/Loadable/SlicerWelcome/: CMakeLists.txt
Modules/Loadable/SubjectHierarchy/: CMakeLists.txt
Modules/Loadable/SubjectHierarchy/Widgets/Python/: CMakeLists.txt
Modules/Loadable/Tables/: CMakeLists.txt
Modules/Loadable/Terminologies/: CMakeLists.txt
Modules/Loadable/Texts/: CMakeLists.txt
Modules/Loadable/Transforms/: CMakeLists.txt
Modules/Loadable/Transforms/Logic/: CMakeLists.txt
Modules/Loadable/Units/: CMakeLists.txt
Modules/Loadable/ViewControllers/: CMakeLists.txt
Modules/Loadable/VolumeRendering/: CMakeLists.txt
Modules/Loadable/VolumeRendering/MRML/: CMakeLists.txt
Modules/Loadable/Volumes/: CMakeLists.txt
Modules/Scripted/CropVolumeSequence/: CMakeLists.txt
Modules/Scripted/DICOM/: CMakeLists.txt
Modules/Scripted/DICOMLib/: CMakeLists.txt
Modules/Scripted/DICOMLib/Logic/: CMakeLists.txt
Modules/Scripted/DICOMLib/SubjectHierarchyPlugins/: CMakeLists.txt
Modules/Scripted/DICOMLib/Widgets/: CMakeLists.txt
Modules/Scripted/DICOMPatcher/: CMakeLists.txt
Modules/Scripted/DICOMPlugins/: CMakeLists.txt
Modules/Scripted/DMRIInstall/: CMakeLists.txt
Modules/Scripted/DataProbe/: CMakeLists.txt
Modules/Scripted/Endoscopy/: CMakeLists.txt
Modules/Scripted/ImportItkSnapLabel/: CMakeLists.txt
Modules/Scripted/PerformanceTests/: CMakeLists.txt
Modules/Scripted/SampleData/: CMakeLists.txt
Modules/Scripted/ScreenCapture/: CMakeLists.txt
Modules/Scripted/SegmentEditor/: CMakeLists.txt
Modules/Scripted/SegmentStatistics/: CMakeLists.txt
Modules/Scripted/SegmentStatistics/SegmentStatisticsPlugins/: CMakeLists.txt
Modules/Scripted/SegmentStatistics/SubjectHierarchyPlugins/: CMakeLists.txt
Modules/Scripted/SelfTests/: CMakeLists.txt
Modules/Scripted/VectorToScalarVolume/: CMakeLists.txt
Modules/Scripted/WebServer/: CMakeLists.txt
SuperBuild/: External_CTKAPPLAUNCHER.cmake  External_OpenSSL.cmake  External_RapidJSON.cmake  External_python-pip.cmake  External_python-setuptools.cmake  External_python.cmake
Templates/: SlicerConfig.cmake.in  SlicerInstallConfig.cmake.in  UseSlicer.cmake.in  vtkSlicerConfigure.h.in  vtkSlicerInstallConfigure.h.in
(+25 files in other folders)
